--- a/src/main/webapp/frontend/tsconfig.json
+++ b/src/main/webapp/frontend/tsconfig.json
@@ -4,7 +4,6 @@
       "module": "commonjs",
       "strict": true,
       "esModuleInterop": true,
-      "allowJs": true,
-        "checkJs": true
+      "allowJs": true
     }
   }
