--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,10 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://project-db-stu2.ddns.net:3307/campus_k_1014_6?characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=campus_k_1014_6
 spring.datasource.password=smhrd6
-spring.jpa.open-in-view= false
-spring.jpa.generate-ddl= true
-spring.jpa.show-sql= true
-spring.jpa.defer-datasource-initialization= true
+spring.jpa.open-in-view: false
+spring.jpa.generate-ddl: true
+spring.jpa.show-sql: true
+spring.jpa.defer-datasource-initialization: true
 spring.mustache.check-template-location=false
-spring.security.user.name= test
-spring.security.user.password= test
+spring.security.user.name: test
+spring.security.user.password: test
